Rework the boot sequence so that the console is always visible on a page refresh and move the browser compatibility info into the console. The intent here is to ensure that if the boot hangs for some reason that users aren't left staring at the spinner indefinitely.

--- a/client/app/css/schema.css
+++ b/client/app/css/schema.css
@@ -1,4 +1,4 @@
-body { overflow: auto; margin: 0px; padding: 0px; background-color: #6699CC; }
+body { overflow: auto; margin: 0px; padding: 0px; background-color: white; }
 
 .classCentered { position: fixed; top: 50%; left: 50% }
 
